--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.4.0",
         "vue-router": "^3.1.5",
-        "vuex": "^3.1.2"
+        "vuex": "^3.1.2",
+        "vuex-persistedstate": "^2.7.1"
     }
 }
